<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/hotel_search_box_content_description"
        android:orientation="vertical"
        android:screenReaderFocusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/input_destination"
            android:text="@string/search_destination_hint" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search"
                android:hint="@string/search_destination_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/search_button" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_hotel_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        app:cardBackgroundColor="#373737"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_rating_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservation_rating_title"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:screenReaderFocusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_rating_title">

                <ImageView
                    android:id="@+id/imageview_hotel"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/hotel_photo_content_description"
                    android:focusable="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hotel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearlayout_hotel_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:accessibilityPaneTitle="Hotel search details"
                    android:orientation="vertical"
                    android:screenReaderFocusable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageview_hotel"
                    app:layout_constraintTop_toTopOf="@+id/imageview_hotel">

                    <TextView
                        android:id="@+id/textview_hotel_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="@string/hotel_name"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textview_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="@string/hotel_reservation_date"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:screenReaderFocusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/imageview_hotel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/linearlayout_hotel_details"
                    app:layout_constraintTop_toBottomOf="@+id/linearlayout_hotel_details">

                    <ImageView
                        android:id="@+id/imageview_mood_sad"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/poor_content_description"
                        android:padding="4dp"
                        android:src="@drawable/ic_mood_sad"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageview_mood_flat"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                    <ImageView
                        android:id="@+id/imageview_mood_flat"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/average_content_description"
                        android:padding="4dp"
                        android:src="@drawable/ic_mood_flat"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageview_mood_smile"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageview_mood_sad"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                    <ImageView
                        android:id="@+id/imageview_mood_smile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/good_content_description"
                        android:padding="4dp"
                        android:src="@drawable/ic_mood_smile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageview_mood_laugh"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageview_mood_flat"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                    <ImageView
                        android:id="@+id/imageview_mood_laugh"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/excellent_content_description"
                        android:padding="4dp"
                        android:src="@drawable/ic_mood_laugh"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageview_mood_smile"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textview_latest_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:accessibilityHeading="true"
        android:text="@string/last_searches_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_hotel_rating" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_search_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_latest_search"
        tools:itemCount="10"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_search_history"
        tools:orientation="vertical" />
</androidx.constraintlayout.widget.ConstraintLayout>